# Trabalhos-Visao-Computacional

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat
include/: CMakeVars.hpp  CMakeVars.hpp.in  HarrisDetector.hpp  Image.hpp  Video.hpp
src/: HarrisDetector.cpp  Image.cpp  Video.cpp  main.cpp
